--- a/src/style/base/common.css
+++ b/src/style/base/common.css
@@ -123,3 +123,9 @@ table {
   border-collapse: collapse;
   border-spacing: 0;
 }
+
+.sidebar {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
