--- a/src/style/layout/all-categories.css
+++ b/src/style/layout/all-categories.css
@@ -1,45 +1,48 @@
-body {
-  background-color: #f6f6f6;
-  font-family: 'DM Sans', sans-serif;
-}
-ul {
-  list-style: none;
-}
 .vertical-menu {
-  width: 356px;
-  height: 472px;
+  width: 335px;
+  height: 228px;
   overflow-y: auto;
 }
-.vertical-menu li {
-  position: relative;
+
+@media only screen and (min-width: 768px) {
+ .vertical-menu{
+    width: 337px;
+    height: 472px;
+ } 
+}
+@media only screen and (min-width: 1440px) {
+    .vertical-menu{
+       width: 356px;
+    } 
 }
 .vertical-menu a {
   text-decoration: none;
   margin-bottom: 32px;
-  color: rgba(0, 0, 0, 0.6);
+  color: var(--color-black-transparent);
   display: block;
   cursor: pointer;
   transition: all 0.3s ease-in-out;
 }
 .vertical-menu a:hover {
-  color: #4f2ee8;
+  color: var(--color-blue);
   font-size: 18px;
   font-weight: 700;
-  line-height: 24px; /* 133.333% */
-  letter-spacing: -0.36px;
+  line-height: 1.3;
+  letter-spacing: -0.02em;
   text-transform: uppercase;
 }
 .vertical-menu a.active {
-  color: white;
+    color: var(--color-blue);
+    text-transform: uppercase;
 }
 .list_name {
-  color: rgba(17, 17, 17, 0.6);
+  color: var(--color-black-transparent);
   font-family: DM Sans;
   font-size: 18px;
   font-style: normal;
   font-weight: 400;
-  line-height: 24px; /* 133.333% */
-  letter-spacing: -0.36px;
+  line-height: 1.3;
+  letter-spacing: -0.02em;
 }
 ::-webkit-scrollbar {
   width: 8px;
@@ -48,12 +51,12 @@ ul {
 /* Handle */
 ::-webkit-scrollbar-thumb {
   border-radius: 12px;
-  background: #e0e0e0;
+  background: var(--color-light-gray2);
   width: 8px;
   height: 167px;
 }
 
 /* Handle on hover */
 ::-webkit-scrollbar-thumb:hover {
-  background: rgba(17, 17, 17, 0.6);
+  background: var(--color-black-transparent);
 }
