--- a/src/style/layout/login.css
+++ b/src/style/layout/login.css
@@ -1,21 +1,19 @@
-* {
-  box-sizing: border-box;
-}
 .backdrop {
   background-color: var(--color-blue);
-  width: 100%;
-  height: 100%;
+  width: 100vw;
+  height: 100vh;
+  padding-top: 127px;
 }
+
 .login-modal {
   position: relative;
-  padding: 40px;
-  padding-top: 80px;
+  padding: 80px 40px 40px;
   width: 580px;
   min-height: 516px;
   border-radius: 18px;
   border: 2px solid var(--color-black);
   background-color: var(--color-light-gray);
-  margin: 127px auto;
+  margin: 0 auto;
 }
 .login-btn {
   position: absolute;
@@ -23,7 +21,11 @@
   right: 24px;
   border: none;
   background-color: transparent;
-  cursor: pointer;
+  /* cursor: pointer; */
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  /* padding: 0; */
 }
 .login-btn-icon {
   stroke: var(--color-black);
@@ -75,12 +77,13 @@
   letter-spacing: -0.01em;
   text-transform: uppercase;
   margin-bottom: 20px;
+  cursor: pointer;
 }
 .login-sign {
   font-family: DM Sans;
   font-size: 18px;
   font-weight: 700;
-  line-height: 1.33; /* 133.333% */
+  line-height: 1.33;
   letter-spacing: -0.01em;
   text-transform: uppercase;
   display: flex;
@@ -88,10 +91,12 @@
   justify-content: center;
 }
 .login-sign-up {
+  color: var(--color-blue);
 }
 .login-sign-in {
+  color: var(--color-blue);
 }
 .is-off {
-    color: rgba(17, 17, 17, 0.50);
-    
+  color: var(--color-black-transparent);
+  text-decoration: none;
 }
