--- a/src/partials/main.html
+++ b/src/partials/main.html
@@ -1,4 +1,6 @@
 <section class="bestsellers">
-  <h1>Best Sellers Books</h1>
+  <h1 class="main-header">
+    Best Sellers <span class="main-header-accent">Books</span>
+  </h1>
   <ul class="bestsellers-list"></ul>
 </section>
