--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -1,10 +1,12 @@
 <header class="header">
   <div class="container nav-container">
     <a href="" class="logo">
-      <svg class="logo-icon" width="100" height="16" aria-label="logotype">
+      <svg class="logo-icon" width="24" height="24" aria-label="logotype">
         <use href="./logos/symbol-defs.svg#icon-logo"></use>
       </svg>
-      Bookshelf
+      <svg class="logo-icon" width="77" height="14" aria-label="logotype">
+        <use href="./logos/symbol-defs.svg#bookshelf"></use>
+      </svg>
     </a>
     <nav class="main-nav">
       <ul class="menu nav-list">
@@ -26,6 +28,30 @@
         </li>
       </ul>
     </nav>
+    <div class="switcher">
+      <label id="switch" class="switch">
+        <input type="checkbox" onchange="toggleTheme()" id="slider" />
+        <span class="slider round">
+          <!-- <svg
+                class="switch-bg"
+                width="40"
+                height="24"
+                aria-label="logotype"
+              >
+                <use href="./logos/symbol-defs.svg#icon-rectangle-27"></use>
+              </svg>
+              <svg
+                class="switch-btn"
+                width="18"
+                height="18"
+                aria-label="logotype"
+              >
+                <use href="./logos/symbol-defs.svg#icon-group-1513"></use>
+              </svg> -->
+        </span>
+      </label>
+      <!-- <button id="switch" onclick="toggleTheme()">Switch</button> -->
+    </div>
     <!--  button menu -->
     <button
       class="menu-toggle js-open-menu"
