--- a/src/style/base/common.css
+++ b/src/style/base/common.css
@@ -102,7 +102,13 @@ section {
   display: block;
 }
 body {
-  line-height: 1;
+  font-family: DM Sans;
+  font-size: 14px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 1.29;
+  letter-spacing: -0.56px;
+  color: var(--color-black);
 }
 ol,
 ul {
@@ -127,9 +133,24 @@ button {
   cursor: pointer;
   padding: 0;
 }
-
+.link {
+  text-decoration: none;
+}
 .sidebar {
   display: flex;
   flex-direction: column;
   align-items: center;
+}
+.is-hidden {
+  position: absolute;
+  width: 1px;
+  height: 1px;
+  margin: -1px;
+  border: 0;
+  padding: 0;
+
+  white-space: nowrap;
+  clip-path: inset(100%);
+  clip: rect(0 0 0 0);
+  overflow: hidden;
 }
