--- a/src/style/layout/login.css
+++ b/src/style/layout/login.css
@@ -1,22 +1,22 @@
 .is-hidden {
-    position: absolute;
-    width: 1px;
-    height: 1px;
-    margin: -1px;
-    border: 0;
-    padding: 0;
-  
-    white-space: nowrap;
-    clip-path: inset(100%);
-    clip: rect(0 0 0 0);
-    overflow: hidden;
-  }
-.login-open{
-    position: absolute;
-    top: 20px;
-    left: 50%;
-    transform: translateX(-50%);
+  position: absolute;
+  width: 1px;
+  height: 1px;
+  margin: -1px;
+  border: 0;
+  padding: 0;
 
+  white-space: nowrap;
+  clip-path: inset(100%);
+  clip: rect(0 0 0 0);
+  overflow: hidden;
+}
+
+.login-open {
+  position: absolute;
+  top: 20px;
+  left: 50%;
+  transform: translateX(-50%);
 }
 .backdrop {
   background-color: var(--color-blue);
@@ -26,7 +26,6 @@
   transition: opacity 800ms ease-in-out, visibility 800ms ease-in-out;
 }
 .backdrop.is-hidden {
-
 }
 .login-modal {
   position: relative;
@@ -110,14 +109,39 @@
     letter-spacing: -0.01em;
   }
 }
-
-@media screen and (min-width: 768px) {
+.login-field-input:focus {
+  border: 2px solid var(--color-blue);
+  outline: none;
 }
-@media screen and (min-width: 1440px) {
+.login-field-input:focus ~ .login-field-icon {
+  stroke: var(--color-blue);
 }
 
 .login-field-input::placeholder {
   color: var(--color-black);
+}
+
+.modal-error-message {
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  width: 100%;
+  text-align: center;
+  color: darkgreen;
+  font-size: 12px;
+  transform: translateY(120%);
+  letter-spacing: -0.3em;
+  opacity: 0;
+  transition: opacity 2s cubic-bezier(0.4, 0, 0.2, 1),
+    letter-spacing 2s cubic-bezier(0.4, 0, 0.2, 1),
+    color 0s cubic-bezier(0.4, 0, 0.2, 1);
+}
+.login-field-input:not(:placeholder-shown):required:invalid
+  ~ .modal-error-message {
+  opacity: 1;
+  letter-spacing: -0.02em;
+  transition-delay: 1s;
+  color: brown;
 }
 
 .login-field-icon {
