--- a/src/style/base/container.css
+++ b/src/style/base/container.css
@@ -27,7 +27,7 @@
 
 @media screen and (min-width: 1440px) {
   .container {
-    display: inline-block;
+    display: inline-flex;
     max-width: 1440px;
     padding: 40px 24px 72px;
   }
