--- a/src/style/layout/all-categories.css
+++ b/src/style/layout/all-categories.css
@@ -5,15 +5,15 @@
 }
 
 @media only screen and (min-width: 768px) {
- .vertical-menu{
+  .vertical-menu {
     width: 337px;
     height: 472px;
- } 
+  }
 }
 @media only screen and (min-width: 1440px) {
-    .vertical-menu{
-       width: 356px;
-    } 
+  .vertical-menu {
+    width: 356px;
+  }
 }
 .vertical-menu a {
   text-decoration: none;
@@ -31,13 +31,16 @@
   letter-spacing: -0.02em;
   text-transform: uppercase;
 }
-.vertical-menu a.active {
-    color: var(--color-blue);
-    text-transform: uppercase;
+a.active {
+  color: var(--color-blue);
+  font-size: 18px;
+  font-weight: 700;
+  line-height: 1.3;
+  letter-spacing: -0.02em;
+  text-transform: uppercase;
 }
 .list_name {
   color: var(--color-black-transparent);
-  font-family: DM Sans;
   font-size: 18px;
   font-style: normal;
   font-weight: 400;
