Added imgs, fixed htm and js, added styles

--- a/src/partials/modal.html
+++ b/src/partials/modal.html
@@ -1,7 +1,7 @@
-<div class="modal">
+<div class="modal is-hidden" data-modal>
   <div class="modal-content">
     <button class="close" type="button">
-      <svg class="close-icon" width="20" height="20">
+      <svg class="close-icon" width="28" height="28">
         <use href="./images/sprite.svg#icon-x-close"></use>
       </svg>
     </button>
@@ -16,4 +16,4 @@
     </div>
   </div>
 </div>
-<script src="./js/modal.js" type="module"></script>
+<script src="./js/modal.js" type="module"></script> 
