--- a/src/style/layout/all-categories.css
+++ b/src/style/layout/all-categories.css
@@ -63,3 +63,9 @@ a.active {
 ::-webkit-scrollbar-thumb:hover {
   background: var(--color-black-transparent);
 }
+.category-books-wrapper {
+  display: flex;
+  flex-wrap: wrap;
+  column-gap: 25px;
+  row-gap: 40px;
+}
