--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -11,17 +11,15 @@
     <nav class="main-nav">
       <ul class="menu nav-list">
         <li class="nav-item">
-          <a href="#home" id="home-link" class="nav-link">Home</a>
+          <a href="index.html" id="home-link" class="nav-link">Home</a>
         </li>
-        <li class="nav-item nav-link">
-          <a href="#" id="shopping-list-link"
+        <li class="nav-item">
+          <a
+            class="nav-link shop-link"
+            href="shoppinglist.html"
+            id="shopping-list-link"
             >Shopping List
-            <svg
-              class="logo-icon"
-              width="100"
-              height="16"
-              aria-label="logotype"
-            >
+            <svg class="logo-icon" width="20" height="20" aria-label="logotype">
               <use href="./logos/symbol-defs.svg#icon-uil-cart"></use>
             </svg>
           </a>
@@ -31,24 +29,7 @@
     <div class="switcher">
       <label id="switch" class="switch">
         <input type="checkbox" onchange="toggleTheme()" id="slider" />
-        <span class="slider round">
-          <!-- <svg
-                class="switch-bg"
-                width="40"
-                height="24"
-                aria-label="logotype"
-              >
-                <use href="./logos/symbol-defs.svg#icon-rectangle-27"></use>
-              </svg>
-              <svg
-                class="switch-btn"
-                width="18"
-                height="18"
-                aria-label="logotype"
-              >
-                <use href="./logos/symbol-defs.svg#icon-group-1513"></use>
-              </svg> -->
-        </span>
+        <span class="slider round"></span>
       </label>
       <!-- <button id="switch" onclick="toggleTheme()">Switch</button> -->
     </div>
@@ -67,5 +48,27 @@
         <use href="./logos/symbol-defs.svg#icon-align-left"></use>
       </svg>
     </button>
+    <div class="profile-container">
+      <a class="profile-link" href="login.html">
+        <img
+          class="profile-img"
+          src="./images/profil-img/ellipse-3.webp"
+          alt="User profile image"
+          srcset="
+            ./images/profil-img/ellipse-3.webp    1x,
+            ./images/profil-img/ellipse-3@2x.webp 2x
+          "
+        />
+        <span class="profile-text">Stephen</span>
+        <svg
+          class="burger-icon"
+          width="23"
+          height="26"
+          aria-label="profile down arrow"
+        >
+          <use href="./logos/symbol-defs.svg#icon-fi-ss-caret-down"></use>
+        </svg>
+      </a>
+    </div>
   </div>
 </header>
