--- a/src/partials/mobile-menu.html
+++ b/src/partials/mobile-menu.html
@@ -1,45 +1,75 @@
-<div class="menu-container js-menu-container" id="mobile-menu">
-  <div class="header-menu">
-    <a href="" class="logo">
-      <svg class="logo-icon" width="24" height="24" aria-label="logotype">
-        <use href="./logos/symbol-defs.svg#icon-logo"></use>
-      </svg>
-      <svg class="logo-icon" width="77" height="14" aria-label="logotype">
-        <use href="./logos/symbol-defs.svg#bookshelf"></use>
-      </svg>
-    </a>
-    <div class="switcher">
-      <label id="switch" class="switch">
-        <input type="checkbox" onchange="toggleTheme()" id="slider" />
-        <span class="slider round"> </span>
-      </label>
-      <!-- <button id="switch" onclick="toggleTheme()">Switch</button> -->
-    </div>
-    <button class="menu-toggle js-close-menu">
-      <svg
-        class="burger-icon"
-        width="32"
-        height="32"
-        aria-label="close menu button"
-      >
-        <use href="./logos/symbol-defs.svg#icon-x-close"></use>
-      </svg>
-    </button>
-  </div>
-
-  <ul class="mobile-menu">
-    <li class="menu-item"><a href="" class="mob-link">HOME</a></li>
-    <li class="menu-item">
-      <a href="" class="mob-link"
-        >SHOPPING LIST<svg
-          class="logo-icon"
-          width="100"
-          height="16"
-          aria-label="logotype"
-        >
-          <use href="./logos/symbol-defs.svg#icon-uil_cart"></use>
-        </svg>
+ <div class="menu-container js-menu-container" id="mobile-menu">
+      <div class="header-menu">
+        <a href="" class="logo">
+          <svg class="logo-icon" width="24" height="24" aria-label="logotype">
+            <use href="./logos/symbol-defs.svg#icon-logo"></use>
+          </svg>
+          <svg class="logo-icon" width="77" height="14" aria-label="logotype">
+            <use href="./logos/symbol-defs.svg#bookshelf"></use>
+          </svg>
+        </a>
+        <div class="switcher">
+          <label id="switch" class="switch">
+            <input type="checkbox" onchange="toggleTheme()" id="slider" />
+            <span class="slider round"> </span>
+          </label>
+          <!-- <button id="switch" onclick="toggleTheme()">Switch</button> -->
+        </div>
+        <button class="menu-toggle js-close-menu">
+          <svg
+            class="burger-icon"
+            width="32"
+            height="32"
+            aria-label="close menu button"
+          >
+            <use href="./logos/symbol-defs.svg#icon-x-close"></use>
+          </svg>
+        </button>
+      </div>
+      <a class="profile-link" href="#">
+        <img
+          class="profile-img"
+          src="./images/profil-img/ellipse-3.webp"
+          alt="User profile image"
+          srcset="
+            ./images/profil-img/ellipse-3.webp    1x,
+            ./images/profil-img/ellipse-3@2x.webp 2x
+          "
+        />
+        <span class="profile-text">Stephen</span>
       </a>
-    </li>
-  </ul>
-</div>
+      <ul class="mobile-menu">
+        <li class="menu-item">
+          <a href="header.html" class="mob-link">HOME</a>
+        </li>
+        <li class="menu-item">
+          <a href="shopping-list.html" class="mob-link"
+            >SHOPPING LIST<svg
+              class="logo-icon"
+              width="20"
+              height="20"
+              aria-label="logotype"
+            >
+              <use href="./logos/symbol-defs.svg#icon-uil-cart"></use>
+            </svg>
+          </a>
+        </li>
+      </ul>
+      <div class="mobile-logoutbtn-container">
+        <a href="#" class="mobile-logout" id="logout-link">
+          Log out
+          <svg width="20" height="20" aria-label="Logout Icon">
+            <use href="./logos/symbol-defs.svg#icon-arrow-narrow-right"></use>
+          </svg>
+        </a>
+      </div>
+    </div>
+    <script
+      defer
+      src="https://cdnjs.cloudflare.com/ajax/libs/body-scroll-lock/3.1.5/bodyScrollLock.min.js"
+      integrity="sha512-HowizSDbQl7UPEAsPnvJHlQsnBmU2YMrv7KkTBulTLEGz9chfBoWYyZJL+MUO6p/yBuuMO/8jI7O29YRZ2uBlA=="
+      crossorigin="anonymous"
+    ></script>
+    <script type="module" src="header.js"></script>
+  </body>
+</html>
