adding button sign up

--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -11,12 +11,12 @@
     <nav class="main-nav">
       <ul class="menu nav-list">
         <li class="nav-item">
-          <a href="index.html" id="home-link" class="nav-link">Home</a>
+          <a href="header.html" id="home-link" class="nav-link">Home</a>
         </li>
         <li class="nav-item">
           <a
             class="nav-link shop-link"
-            href="shoppinglist.html"
+            href="shopping-list.html"
             id="shopping-list-link"
             >Shopping List
             <svg class="logo-icon" width="20" height="20" aria-label="logotype">
@@ -48,8 +48,16 @@
         <use href="./logos/symbol-defs.svg#icon-align-left"></use>
       </svg>
     </button>
-    <div class="profile-container">
-      <a class="profile-link" href="login.html">
+    <div class="signup-container">
+      <a href="#" class="signup-link" id="signup-link">
+        <span class="signup-text"> Sign up </span>
+        <svg width="20" height="20" aria-label="Sign up Icon">
+          <use href="./logos/symbol-defs.svg#icon-arrow-narrow-right"></use>
+        </svg>
+      </a>
+    </div>
+    <div class="profile-container visually-hidden">
+      <a class="profile-link" href="#">
         <img
           class="profile-img"
           src="./images/profil-img/ellipse-3.webp"
