--- a/src/style/layout/header.css
+++ b/src/style/layout/header.css
@@ -1,3 +1,4 @@
+
 /* body {
   background-color: var(--background-color);
   color: var(--text-color);
@@ -45,7 +46,7 @@
 
 .slider:before {
   position: absolute;
-  content: '';
+  content: "";
   height: 40px;
   width: 40px;
   left: 0px;
@@ -56,7 +57,7 @@
   -webkit-transition: 0.4s;
   transition: 0.4s;
   box-shadow: 0 0px 15px #2020203d;
-  background: white url('https://i.ibb.co/FxzBYR9/night.png');
+  background: white url("https://i.ibb.co/FxzBYR9/night.png");
   background-repeat: no-repeat;
   background-position: center;
 }
@@ -73,7 +74,7 @@ input:checked + .slider:before {
   -webkit-transform: translateX(24px);
   -ms-transform: translateX(24px);
   transform: translateX(24px);
-  background: white url('https://i.ibb.co/7JfqXxB/sunny.png');
+  background: white url("https://i.ibb.co/7JfqXxB/sunny.png");
   background-repeat: no-repeat;
   background-position: center;
 }
@@ -272,7 +273,7 @@ input:checked + .slider:before {
 }
 
 .menu-container {
-  background-image: url('./images/mobile-menu-bg/group-6.webp'),
+  background-image: url("./images/mobile-menu-bg/group-6.webp"),
     var(--custom-radial-gradient); /* 1x image */
   background-repeat: no-repeat;
   background-size: contain;
@@ -283,7 +284,7 @@ input:checked + .slider:before {
 @media only screen and (min-resolution: 144dpi),
   only screen and (min-resolution: 1.5dppx) {
   .menu-container {
-    background-image: url('./images/mobile-menu-bg/group-6@2x.webp'),
+    background-image: url("./images/mobile-menu-bg/group-6@2x.webp"),
       var(--custom-radial-gradient);
     background-size: contain;
     background-position: center bottom;
@@ -345,6 +346,9 @@ input:checked + .slider:before {
   .profile-container {
     display: none;
   }
+  .signup-container {
+    display: none;
+  }
 }
 
 .switcher {
@@ -384,6 +388,7 @@ input:checked + .slider:before {
     min-width: 185px;
     height: 45px;
   }
+
   .profile-container:hover,
   .profile-container:focus {
     background-color: rgb(79, 79, 187);
@@ -412,7 +417,37 @@ input:checked + .slider:before {
     line-height: normal;
     letter-spacing: -0.44px;
   }
+  .signup-container {
+    display: flex;
+    align-items: center;
+    margin-left: auto;
+    background-color: var(--color-blue);
+    border-radius: 36px;
+    min-width: 185px;
+    height: 45px;
+  }
+  .signup-container:hover,
+  .signup-container:focus {
+    background-color: rgb(79, 79, 187);
+  }
 
+  .signup-link {
+    text-decoration: none;
+    display: flex;
+    align-items: center;
+    gap: 90px;
+    margin: 15px 14px 15px 14px;
+  }
+
+  .signup-text {
+    color: #fff;
+    font-family: DM Sans;
+    font-size: 14px;
+    font-style: normal;
+    font-weight: 500;
+    line-height: 18px; /* 128.571% */
+    letter-spacing: -0.56px;
+  }
   .header {
     margin-bottom: 40px;
     padding: 0;
