--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -11,14 +11,10 @@
     <nav class="main-nav">
       <ul class="menu nav-list">
         <li class="nav-item">
-          <a href="header.html" id="home-link" class="nav-link">Home</a>
+          <a href="./index.html" id="home-link" class="nav-link">Home</a>
         </li>
         <li class="nav-item">
-          <a
-            class="nav-link shop-link"
-            href="shopping-list.html"
-            id="shopping-list-link"
-            >Shopping List
+          <a class="nav-link shop-link" href="./shoppinglist.html" id="shopping-list-link">Shopping List
             <svg class="logo-icon" width="20" height="20" aria-label="logotype">
               <use href="./logos/symbol-defs.svg#icon-uil-cart"></use>
             </svg>
@@ -34,22 +30,13 @@
       <!-- <button id="switch" onclick="toggleTheme()">Switch</button> -->
     </div>
     <!--  button menu -->
-    <button
-      class="menu-toggle js-open-menu"
-      aria-expanded="false"
-      aria-controls="mobile-menu"
-    >
-      <svg
-        class="burger-icon"
-        width="32"
-        height="32"
-        aria-label="mobile menu button"
-      >
+    <button class="menu-toggle js-open-menu" aria-expanded="false" aria-controls="mobile-menu">
+      <svg class="burger-icon" width="32" height="32" aria-label="mobile menu button">
         <use href="./logos/symbol-defs.svg#icon-align-left"></use>
       </svg>
     </button>
     <div class="signup-container">
-      <a href="#" class="signup-link" id="signup-link">
+      <a href="./login.html" class="signup-link" id="signup-link">
         <span class="signup-text"> Sign up </span>
         <svg width="20" height="20" aria-label="Sign up Icon">
           <use href="./logos/symbol-defs.svg#icon-arrow-narrow-right"></use>
@@ -58,23 +45,21 @@
     </div>
     <div class="profile-container visually-hidden">
       <a class="profile-link" href="#">
-        <img
-          class="profile-img"
-          src="./images/profil-img/ellipse-3.webp"
-          alt="User profile image"
-          srcset="
+        <img class="profile-img" src="./images/profil-img/ellipse-3.webp" alt="User profile image" srcset="
             ./images/profil-img/ellipse-3.webp    1x,
             ./images/profil-img/ellipse-3@2x.webp 2x
-          "
-        />
+          " />
         <span class="profile-text">Stephen</span>
-        <svg
-          class="burger-icon"
-          width="23"
-          height="26"
-          aria-label="profile down arrow"
-        >
+        <svg class="burger-icon" width="23" height="26" aria-label="profile down arrow">
           <use href="./logos/symbol-defs.svg#icon-fi-ss-caret-down"></use>
+        </svg>
+      </a>
+    </div>
+    <div class="signup-container visually-hidden">
+      <a href="#" class="signup-link" id="signup-link">
+        <span class="signup-text"> Log out </span>
+        <svg width="20" height="20" aria-label="Sign up Icon">
+          <use href="./logos/symbol-defs.svg#icon-arrow-narrow-right"></use>
         </svg>
       </a>
     </div>
