--- a/src/style/layout/header.css
+++ b/src/style/layout/header.css
@@ -1,4 +1,3 @@
-
 /* body {
   background-color: var(--background-color);
   color: var(--text-color);
@@ -46,7 +45,7 @@
 
 .slider:before {
   position: absolute;
-  content: "";
+  content: '';
   height: 40px;
   width: 40px;
   left: 0px;
@@ -57,7 +56,7 @@
   -webkit-transition: 0.4s;
   transition: 0.4s;
   box-shadow: 0 0px 15px #2020203d;
-  background: white url("https://i.ibb.co/FxzBYR9/night.png");
+  background: white url('https://i.ibb.co/FxzBYR9/night.png');
   background-repeat: no-repeat;
   background-position: center;
 }
@@ -74,7 +73,7 @@ input:checked + .slider:before {
   -webkit-transform: translateX(24px);
   -ms-transform: translateX(24px);
   transform: translateX(24px);
-  background: white url("https://i.ibb.co/7JfqXxB/sunny.png");
+  background: white url('https://i.ibb.co/7JfqXxB/sunny.png');
   background-repeat: no-repeat;
   background-position: center;
 }
@@ -273,7 +272,7 @@ input:checked + .slider:before {
 }
 
 .menu-container {
-  background-image: url("./images/mobile-menu-bg/group-6.webp"),
+  background-image: url('../../images/mobile-menu-bg/group-6.webp'),
     var(--custom-radial-gradient); /* 1x image */
   background-repeat: no-repeat;
   background-size: contain;
@@ -284,7 +283,7 @@ input:checked + .slider:before {
 @media only screen and (min-resolution: 144dpi),
   only screen and (min-resolution: 1.5dppx) {
   .menu-container {
-    background-image: url("./images/mobile-menu-bg/group-6@2x.webp"),
+    background-image: url('../../images/mobile-menu-bg/group-6@2x.webp'),
       var(--custom-radial-gradient);
     background-size: contain;
     background-position: center bottom;
