--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -43,7 +43,7 @@
         </svg>
       </a>
     </div>
-    <div class="profile-container visually-hidden">
+    <div class="profile-container is-hidden">
       <a class="profile-link" href="#">
         <img class="profile-img" src="./images/profil-img/ellipse-3.webp" alt="User profile image" srcset="
             ./images/profil-img/ellipse-3.webp    1x,
@@ -55,7 +55,7 @@
         </svg>
       </a>
     </div>
-    <div class="signup-container visually-hidden">
+    <div class="signup-container is-hidden">
       <a href="#" class="signup-link" id="signup-link">
         <span class="signup-text"> Log out </span>
         <svg width="20" height="20" aria-label="Sign up Icon">
