--- a/src/style/layout/login.css
+++ b/src/style/layout/login.css
@@ -55,6 +55,11 @@
   display: flex;
   justify-content: center;
   align-items: center;
+  transition: transform .5s ease-in-out
+}
+.login-btn:hover,
+.login-btn:focus {
+    transform: rotate(360deg);
 }
 
 @media screen and (min-width: 768px) {
@@ -176,7 +181,15 @@
   letter-spacing: 0.01em;
   text-transform: uppercase;
   margin-bottom: 14px;
+  transition: color .5s ease-in-out, background-color .5s ease-in-out;
+  border: 2px solid var(--color-black);
 }
+.login-submit-btn:hover,
+.login-submit-btn:focus {
+color: var(--color-black) ;
+background-color: var( --color-white);
+}
+
 @media screen and (min-width: 768px) {
   .login-submit-btn {
     max-width: 500px;
