--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -1,82 +1,80 @@
-<header class="header">
-  <div class="container nav-container">
-    <a href="" class="logo">
-      <svg class="logo-icon" width="24" height="24" aria-label="logotype">
-        <use href="./logos/symbol-defs.svg#icon-logo"></use>
-      </svg>
-      <svg class="logo-icon" width="77" height="14" aria-label="logotype">
-        <use href="./logos/symbol-defs.svg#bookshelf"></use>
+<header class="header nav-container">
+  <a href="" class="logo">
+    <svg class="logo-icon" width="24" height="24" aria-label="logotype">
+      <use href="./logos/symbol-defs.svg#icon-logo"></use>
+    </svg>
+    <svg class="logo-icon" width="77" height="14" aria-label="logotype">
+      <use href="./logos/symbol-defs.svg#bookshelf"></use>
+    </svg>
+  </a>
+  <nav class="main-nav">
+    <ul class="menu nav-list">
+      <li class="nav-item">
+        <a href="header.html" id="home-link" class="nav-link">Home</a>
+      </li>
+      <li class="nav-item">
+        <a
+          class="nav-link shop-link"
+          href="shopping-list.html"
+          id="shopping-list-link"
+          >Shopping List
+          <svg class="logo-icon" width="20" height="20" aria-label="logotype">
+            <use href="./logos/symbol-defs.svg#icon-uil-cart"></use>
+          </svg>
+        </a>
+      </li>
+    </ul>
+  </nav>
+  <div class="switcher">
+    <label id="switch" class="switch">
+      <input type="checkbox" onchange="toggleTheme()" id="slider" />
+      <span class="slider round"></span>
+    </label>
+    <!-- <button id="switch" onclick="toggleTheme()">Switch</button> -->
+  </div>
+  <!--  button menu -->
+  <button
+    class="menu-toggle js-open-menu"
+    aria-expanded="false"
+    aria-controls="mobile-menu"
+  >
+    <svg
+      class="burger-icon"
+      width="32"
+      height="32"
+      aria-label="mobile menu button"
+    >
+      <use href="./logos/symbol-defs.svg#icon-align-left"></use>
+    </svg>
+  </button>
+  <div class="signup-container">
+    <a href="#" class="signup-link" id="signup-link">
+      <span class="signup-text"> Sign up </span>
+      <svg width="20" height="20" aria-label="Sign up Icon">
+        <use href="./logos/symbol-defs.svg#arrow-right"></use>
       </svg>
     </a>
-    <nav class="main-nav">
-      <ul class="menu nav-list">
-        <li class="nav-item">
-          <a href="header.html" id="home-link" class="nav-link">Home</a>
-        </li>
-        <li class="nav-item">
-          <a
-            class="nav-link shop-link"
-            href="shopping-list.html"
-            id="shopping-list-link"
-            >Shopping List
-            <svg class="logo-icon" width="20" height="20" aria-label="logotype">
-              <use href="./logos/symbol-defs.svg#icon-uil-cart"></use>
-            </svg>
-          </a>
-        </li>
-      </ul>
-    </nav>
-    <div class="switcher">
-      <label id="switch" class="switch">
-        <input type="checkbox" onchange="toggleTheme()" id="slider" />
-        <span class="slider round"></span>
-      </label>
-      <!-- <button id="switch" onclick="toggleTheme()">Switch</button> -->
-    </div>
-    <!--  button menu -->
-    <button
-      class="menu-toggle js-open-menu"
-      aria-expanded="false"
-      aria-controls="mobile-menu"
-    >
+  </div>
+  <div class="profile-container visually-hidden">
+    <a class="profile-link" href="#">
+      <img
+        class="profile-img"
+        src="./images/profil-img/ellipse-3.webp"
+        alt="User profile image"
+        srcset="
+          ./images/profil-img/ellipse-3.webp    1x,
+          ./images/profil-img/ellipse-3@2x.webp 2x
+        "
+      />
+      <span class="profile-text">Stephen</span>
       <svg
         class="burger-icon"
-        width="32"
-        height="32"
-        aria-label="mobile menu button"
+        width="23"
+        height="26"
+        aria-label="profile down arrow"
       >
-        <use href="./logos/symbol-defs.svg#icon-align-left"></use>
+        <use href="./logos/symbol-defs.svg#icon-fi-ss-caret-down"></use>
       </svg>
-    </button>
-    <div class="signup-container">
-      <a href="#" class="signup-link" id="signup-link">
-        <span class="signup-text"> Sign up </span>
-        <svg width="20" height="20" aria-label="Sign up Icon">
-          <use href="./logos/symbol-defs.svg#icon-arrow-narrow-right"></use>
-        </svg>
-      </a>
-    </div>
-    <div class="profile-container visually-hidden">
-      <a class="profile-link" href="#">
-        <img
-          class="profile-img"
-          src="./images/profil-img/ellipse-3.webp"
-          alt="User profile image"
-          srcset="
-            ./images/profil-img/ellipse-3.webp    1x,
-            ./images/profil-img/ellipse-3@2x.webp 2x
-          "
-        />
-        <span class="profile-text">Stephen</span>
-        <svg
-          class="burger-icon"
-          width="23"
-          height="26"
-          aria-label="profile down arrow"
-        >
-          <use href="./logos/symbol-defs.svg#icon-fi-ss-caret-down"></use>
-        </svg>
-      </a>
-    </div>
+    </a>
   </div>
 </header>
