--- a/src/partials/mobile-menu.html
+++ b/src/partials/mobile-menu.html
@@ -1,6 +1,6 @@
 <div class="menu-container js-menu-container" id="mobile-menu">
   <div class="header-menu">
-    <a href="" class="logo">
+    <a href="../index.html" class="logo">
       <svg class="logo-icon" width="24" height="24" aria-label="logotype">
         <use href="./images/sprite.svg#icon-logo"></use>
       </svg>
@@ -16,16 +16,26 @@
       <!-- <button id="switch" onclick="toggleTheme()">Switch</button> -->
     </div>
     <button class="menu-toggle js-close-menu">
-      <svg class="burger-icon" width="32" height="32" aria-label="close menu button">
+      <svg
+        class="burger-icon"
+        width="32"
+        height="32"
+        aria-label="close menu button"
+      >
         <use href="./images/sprite.svg#icon-x-close"></use>
       </svg>
     </button>
   </div>
   <a class="profile-link" href="#">
-    <img class="profile-img" src="./images/profil-img/ellipse-3.webp" alt="User profile image" srcset="
-            ./images/profil-img/ellipse-3.webp    1x,
-            ./images/profil-img/ellipse-3@2x.webp 2x
-          " />
+    <img
+      class="profile-img"
+      src="./images/profil-img/ellipse-3.webp"
+      alt="User profile image"
+      srcset="
+        ./images/profil-img/ellipse-3.webp    1x,
+        ./images/profil-img/ellipse-3@2x.webp 2x
+      "
+    />
     <span class="profile-text">Stephen</span>
   </a>
   <ul class="mobile-menu">
@@ -33,8 +43,13 @@
       <a href="index.html" class="mob-link">HOME</a>
     </li>
     <li class="menu-item">
-      <a href="shoppinglist.html" class="mob-link">SHOPPING LIST<svg class="logo-icon" width="20" height="20"
-          aria-label="logotype">
+      <a href="shoppinglist.html" class="mob-link"
+        >SHOPPING LIST<svg
+          class="logo-icon"
+          width="20"
+          height="20"
+          aria-label="logotype"
+        >
           <use href="./images/sprite.svg#icon-uil-cart"></use>
         </svg>
       </a>
@@ -44,7 +59,7 @@
     <a href="#" class="mobile-logout" id="logout-link">
       Log out
       <svg width="20" height="20" aria-label="Logout Icon">
-        <use href="./images/sprite.svg#icon-arrow-narrow-right"></use>
+        <use href="./images/sprite.svg#arrow-right"></use>
       </svg>
     </a>
   </div>
