--- a/src/partials/mobile-menu.html
+++ b/src/partials/mobile-menu.html
@@ -1,6 +1,6 @@
 <div class="menu-container js-menu-container" id="mobile-menu">
   <div class="header-menu">
-    <a href="../index.html" class="logo">
+    <a href="#" class="logo">
       <svg class="logo-icon" width="24" height="24" aria-label="logotype">
         <use href="./images/sprite.svg#icon-logo"></use>
       </svg>
