--- a/src/partials/allcategories.html
+++ b/src/partials/allcategories.html
@@ -1,5 +1,5 @@
 <ul class="vertical-menu">
-    <li class='list_name' name='allcategories'>
+    <li class='list_name all_categories'>
         All categories
     </li>
 </ul>
