--- a/src/partials/support.html
+++ b/src/partials/support.html
@@ -336,10 +336,10 @@
       </svg>
     </button>
 
-    <button class="section-support-btn scroll-up-btn is-hidden" type="button">
-      <svg class="scroll-up" width="20" height="20" aria-label="Scroll up logo">
-        <use href="./images/sprite.svg#scroll-up"></use>
-      </svg>
-    </button>
+    <!-- <button class="section-support-btn scroll-up-btn is-hidden" type="button"> -->
+    <!-- <svg class="scroll-up" width="20" height="20" aria-label="Scroll up logo"> -->
+    <!-- <use href="./images/sprite.svg#scroll-up"></use> -->
+    <!-- </svg> -->
+    <!-- </button> -->
   </div>
 </section>
