--- a/src/partials/support.html
+++ b/src/partials/support.html
@@ -10,8 +10,8 @@
         <use href="./images/sprite.svg#gerb"></use>
       </svg>
     </h2>
-    <ul class="section-support-list list">
-      <li class="section-support-list-item first-three-el">
+    <ul class="section-support-list list-support">
+      <li class="section-support-list-item first-li-el">
         <a
           class="section-support-link link"
           target="_blank"
@@ -24,7 +24,6 @@
                 ./images/support/mobile/save_the_children_mobil.webp    1x,
                 ./images/support/mobile/save_the_children_mobil_2x.webp 2x
               "
-              media="(max-width: 768px)"
               type="image/webp"
             />
             <source
@@ -32,7 +31,6 @@
                 ./images/support/mobile/save_the_children_mobil.png    1x,
                 ./images/support/mobile/save_the_children_mobil_2x.png 2x
               "
-              media="(max-width: 768px)"
               type="image/png"
             />
             <img
@@ -45,7 +43,7 @@
           </picture>
         </a>
       </li>
-      <li class="section-support-list-item first-three-el">
+      <li class="section-support-list-item second-li-el">
         <a
           class="section-support-link link"
           target="_blank"
@@ -58,7 +56,6 @@
                 ./images/support/mobile/project_hope_mobil.webp    1x,
                 ./images/support/mobile/project_hope_mobil_2x.webp 2x
               "
-              media="(max-width: 768px)"
               type="image/webp"
             />
             <source
@@ -66,7 +63,6 @@
                 ./images/support/mobile/project_hope_mobil.png    1x,
                 ./images/support/mobile/project_hope_mobil_2x.png 2x
               "
-              media="(max-width: 768px)"
               type="image/png"
             />
             <img
@@ -80,7 +76,7 @@
         </a>
       </li>
 
-      <li class="section-support-list-item first-three-el">
+      <li class="section-support-list-item third-li-el">
         <a
           class="section-support-link link"
           target="_blank"
@@ -93,7 +89,6 @@
                 ./images/support/mobile/international_medical_corps_mobil.webp    1x,
                 ./images/support/mobile/international_medical_corps_mobil_2x.webp 2x
               "
-              media="(max-width: 768px)"
               type="image/webp"
             />
             <source
@@ -101,7 +96,6 @@
                 ./images/support/mobile/international_medical_corps_mobil.png    1x,
                 ./images/support/mobile/international_medical_corps_mobil_2x.png 2x
               "
-              media="(max-width: 768px)"
               type="image/png"
             />
             <img
@@ -128,7 +122,6 @@
                 ./images/support/mobile/razom_mobil.webp    1x,
                 ./images/support/mobile/razom_mobil_2x.webp 2x
               "
-              media="(max-width: 768px)"
               type="image/webp"
             />
             <source
@@ -136,7 +129,6 @@
                 ./images/support/mobile/razom_mobil.png    1x,
                 ./images/support/mobile/razom_mobil_2x.png 2x
               "
-              media="(max-width: 768px)"
               type="image/png"
             />
             <img
@@ -162,7 +154,6 @@
                 ./images/support/mobile/action_against_hunger_mobil.webp    1x,
                 ./images/support/mobile/action_against_hunger_mobil_2x.webp 2x
               "
-              media="(max-width: 768px)"
               type="image/webp"
             />
             <source
@@ -170,7 +161,6 @@
                 ./images/support/mobile/action_against_hunger_mobil.png    1x,
                 ./images/support/mobile/action_against_hunger_mobil_2x.png 2x
               "
-              media="(max-width: 768px)"
               type="image/png"
             />
             <img
@@ -197,7 +187,6 @@
                 ./images/support/mobile/serhiy_prytula_charity_foundation_mobil.webp    1x,
                 ./images/support/mobile/serhiy_prytula_charity_foundation_mobil_2x.webp 2x
               "
-              media="(max-width: 768px)"
               type="image/webp"
             />
             <source
@@ -205,7 +194,6 @@
                 ./images/support/mobile/serhiy_prytula_charity_foundation_mobil.png    1x,
                 ./images/support/mobile/serhiy_prytula_charity_foundation_mobil_2x.png 2x
               "
-              media="(max-width: 768px)"
               type="image/png"
             />
             <img
@@ -219,7 +207,7 @@
         </a>
       </li>
 
-      <li class="section-support-list-item is-hidden last-three-el">
+      <li class="section-support-list-item is-hidden seven-li-el">
         <a
           class="section-support-link link"
           target="_blank"
@@ -232,7 +220,6 @@
                 ./images/support/mobile/medicins_sans_frontieres_mobil.webp    1x,
                 ./images/support/mobile/medicins_sans_frontieres_mobil_2x.webp 2x
               "
-              media="(max-width: 768px)"
               type="image/webp"
             />
             <source
@@ -240,7 +227,6 @@
                 ./images/support/mobile/medicins_sans_frontieres_mobil.png    1x,
                 ./images/support/mobile/medicins_sans_frontieres_mobil_2x.png 2x
               "
-              media="(max-width: 768px)"
               type="image/png"
             />
             <img
@@ -254,7 +240,7 @@
         </a>
       </li>
 
-      <li class="section-support-list-item is-hidden last-three-el">
+      <li class="section-support-list-item is-hidden eight-li-el">
         <a
           class="section-support-link link"
           target="_blank"
@@ -267,7 +253,6 @@
                 ./images/support/mobile/world_vision_mobil.webp    1x,
                 ./images/support/mobile/world_vision_mobil_2x.webp 2x
               "
-              media="(max-width: 768px)"
               type="image/webp"
             />
             <source
@@ -289,7 +274,7 @@
         </a>
       </li>
 
-      <li class="section-support-list-item is-hidden last-three-el">
+      <li class="section-support-list-item is-hidden ninth-li-el">
         <a
           class="section-support-link link"
           target="_blank"
@@ -302,7 +287,6 @@
                 ./images/support/mobile/united24_mobil.webp    1x,
                 ./images/support/mobile/united24_mobil_2x.webp 2x
               "
-              media="(max-width: 768px)"
               type="image/webp"
             />
             <source
@@ -310,7 +294,6 @@
                 ./images/support/mobile/united24_mobil.png    1x,
                 ./images/support/mobile/united24_mobil_2x.png 2x
               "
-              media="(max-width: 768px)"
               type="image/png"
             />
             <img
@@ -335,11 +318,5 @@
         <use href="./images/sprite.svg#arrow-small-left-down"></use>
       </svg>
     </button>
-
-    <!-- <button class="section-support-btn scroll-up-btn is-hidden" type="button"> -->
-    <!-- <svg class="scroll-up" width="20" height="20" aria-label="Scroll up logo"> -->
-    <!-- <use href="./images/sprite.svg#scroll-up"></use> -->
-    <!-- </svg> -->
-    <!-- </button> -->
   </div>
 </section>
