--- a/src/style/layout/support.css
+++ b/src/style/layout/support.css
@@ -1,8 +1,8 @@
 .section-support-container {
-  padding-top: 28px;
+  padding-top: 24px;
   padding-left: 40px;
   padding-right: 40px;
-  padding-bottom: 26px;
+  padding-bottom: 20px;
   background: radial-gradient(
     189.32% 190.93% at 59.76% -23.42%,
     #4f2ee8 18.03%,
@@ -23,7 +23,7 @@
 .section-support-title {
   display: flex;
   align-items: center;
-  margin-bottom: 44px;
+  margin-bottom: 40px;
   color: var(--color-white, #ffffff);
   font-size: 22px;
   font-style: normal;
@@ -35,7 +35,7 @@
   display: flex;
   flex-direction: column;
   gap: 20px;
-  margin-bottom: 24px;
+  margin-bottom: 20px;
   margin-right: 112px;
 }
 .section-support-link {
@@ -70,11 +70,19 @@
   border-radius: 50%;
   margin-left: auto;
   margin-right: auto;
+  transition: all 0.5s;
 }
 
+.up {
+  transform: rotate(180deg);
+}
+.down {
+  transform: rotate(360deg);
+}
 .scroll-down {
   fill: var(--color-blue);
 }
+
 @media screen and (min-width: 375px) {
   .section-support {
     max-width: 335px;
@@ -97,6 +105,7 @@
   }
   .section-support-title {
     font-size: 24px;
+    margin-bottom: 44px;
   }
   .section-support-list {
     margin-right: 130px;
