final for today 21:10

--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -36,11 +36,11 @@
     </div>
     <div class="switcher-button">
       <div class="switcher">
-        <label id="switch" class="switch">
-          <input type="checkbox" onchange="toggleTheme()" id="slider" />
-          <span class="slider round"></span>
-        </label>
-        <!-- <button id="switch" onclick="toggleTheme()">Switch</button> -->
+        <div class="button r" id="button-1">
+          <input type="checkbox" class="checkbox" />
+          <div class="knobs"></div>
+          <div class="layer"></div>
+        </div>
       </div>
       <!--  button menu -->
       <button
